src/test/deca/context/invalid/intermediaire2/test-complementaire/33inv_op_and.deca
// Description:
//  Programme avec une chaine dans une condition générant une erreur
//
// Resultats:
//  33inv_op_and.lis 
// 
// Historique:
//    cree le 10/06/2022

{
  int x = 14;
  print (x);
  if ("coucou" && x <= 19) {
    print ( " est" );
  } else {
    print ( " n'est pas " );
  }
  println ( " dans [15,19]" );
}
